objects/Parcela__c.object
<CustomObject>
    <fields>
        <fullName>Data_da_parcela__c</fullName>
        <label>Data da parcela</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demanda__c</fullName>
        <label>Demanda</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Parcelas</relationshipLabel>
        <relationshipName>Parcelas_de_propostas_de_pagamento</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Valor_da_parcela__c</fullName>
        <label>Valor da parcela</label>
        <precision>15</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Parcela</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Número da parcela</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcelas</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_AR</fullName>
        <active>true</active>
        <label>Standard_AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_UY</fullName>
        <active>true</active>
        <label>Standard_UY</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>